--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "next": "13.1.2",
     "next-auth": "^4.18.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@types/node": "18.11.18",
