--- a/package.json
+++ b/package.json
@@ -9,22 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@next-auth/prisma-adapter": "^1.0.5",
-    "@next/font": "13.1.2",
-    "@prisma/client": "^4.9.0",
-    "next": "13.1.2",
-    "next-auth": "^4.18.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "zod": "^3.20.6"
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.12.1",
+    "next": "^13.5.6",
+    "next-auth": "^4.24.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
-    "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2",
-    "prisma": "^4.9.0",
-    "typescript": "4.9.4"
+    "@types/node": "^18.16.1",
+    "@types/react": "^18.2.75",
+    "@types/react-dom": "^18.2.24",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^13.5.6",
+    "prisma": "^5.12.1",
+    "typescript": "^5.4.4"
   }
 }
