--- a/package.json
+++ b/package.json
@@ -21,9 +21,12 @@
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "^13.5.6",
+    "postcss": "^8.4.38",
     "prisma": "^5.12.1",
+    "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4"
   }
 }
