--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "clsx": "^2.1.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-resizable-panels": "^2.0.18",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
