--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.12.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-scroll-area": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "next": "^13.5.6",
