--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-table": "^8.16.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "lucide-react": "^0.373.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
