--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@tanstack/react-table": "^8.17.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "jotai": "^2.8.0",
     "lucide-react": "^0.373.0",
     "next": "^13.5.6",
     "next-auth": "^4.24.7",
