--- a/package.json
+++ b/package.json
@@ -26,23 +26,26 @@
     "clsx": "^2.1.0",
     "jotai": "^2.8.0",
     "lucide-react": "^0.373.0",
-    "next": "^13.5.6",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-resizable-panels": "^2.0.19",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/eslint": "^8.56.10",
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "@typescript-eslint/eslint-plugin": "^7.11.0",
+    "@typescript-eslint/parser": "^7.11.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
     "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
