--- a/package.json
+++ b/package.json
@@ -12,8 +12,6 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/free-brands-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/client": "^5.12.1",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
@@ -27,7 +25,7 @@
     "jotai": "^2.8.0",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
-    "next-auth": "^4.24.7",
+    "next-auth": "^5.0.0-beta.18",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -47,7 +45,6 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.2.3",
     "postcss": "^8.4.38",
-    "prisma": "^5.12.1",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.4"
   }
