--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@trpc/react-query": "^10.45.2",
     "@trpc/server": "^10.45.2",
     "@zodios/core": "^10.9.6",
+    "@zodios/plugins": "^10.6.0",
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.0",
