--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "class-variance-authority": "^0.7.0",
     "client-only": "^0.0.1",
     "clsx": "^2.1.0",
-    "jotai": "^2.8.0",
     "lucide-react": "^0.373.0",
     "next": "^14.2.3",
     "next-auth": "^5.0.0-beta.18",
@@ -43,7 +42,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^4.5.4"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
