--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-highlight-words": "^0.20.0",
     "react-resizable-panels": "^2.0.19",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
@@ -50,6 +51,7 @@
     "@types/node": "^18.16.1",
     "@types/react": "^18.2.75",
     "@types/react-dom": "^18.2.24",
+    "@types/react-highlight-words": "^0.20.0",
     "@typescript-eslint/eslint-plugin": "^7.11.0",
     "@typescript-eslint/parser": "^7.11.0",
     "autoprefixer": "^10.4.19",
